src/test/data/tests/chapter_17/invalid_types/extra_credit/prefix_incr_void.c
// Can't apply prefix ++/-- to void lvalue
void f(void){
    return;
}

int main(void) {
    ++(f());
    return 0;
}
